src/static/dev/room.css
body {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  overflow: hidden;
  color: black;
  background: white;
}

:focus {
  outline: 1px dotted black;
}

#load-wrapper {
  display: inline-block;
  background: white;
  padding: 30px;
  margin: 30px auto;
  transition: all 0.25s, box-shadow 0.5s;
  z-index: 100;
}

#load-wrapper hr {
  margin: 10px 0;
  border: 1px solid black;
}

.content-box {
  display: block;
  text-align: justify;
}

#load-wrapper .wait {
  font-weight: bold;
  margin: 10px 0;
}

.note {
  display: table-row;
}
.note > span {
  display: table-cell;
}
.note > :first-child {
  font-weight: bold;
  padding-right: 1ch;
}

.indent {
  display: block;
  margin-left: 1em;
}

.hidden {
  display: inline-block;
  overflow: hidden;
  width: 0;
  height: 0;
  opacity: 0;
}

.message > .line {
  display: -webkit-flex;
  display: flex;
  white-space: pre-wrap;
  word-wrap: break-word;
}
.message.ping > .line {
  background: #ffffc0;
}
.message > .line .nick-wrapper .nick {
  display: inline-block;
}
.message > .line .nick-wrapper .nick::before {
  content: "";
  display: inline-block;
  min-height: 1em;
}
.message > .line time {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
  padding: 1px 0;
  text-align: center;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
}
.message > .line time, .message > .line time a {
  color: #808080;
}
.message.ping > .line time, .message.ping > .line time a {
  color: black;
}
.message > .line .content {
  min-width: 0;
}
.message > .line .content .message-text {
  display: block;
  padding: 1px 0 1px 0.25em;
}
.message.emote > .line .content .message-text {
  padding-right: 0.25em;
}

.message > .line .mention, .message > .line a {
  unicode-bidi: embed;
}
.message > .line .smiley {
  font-weight: bold;
}
.message > .line .sigil {
  color: #808080;
}
.message > .line .false {
  display: inline;
  color: inherit;
}
.message > .line .emph-before, .message > .line .emph-after {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
}
.message > .line .monospace {
  background: #f0f0f0;
}
.message > .line .monospace-block {
  display: block;
}

.message > .replies {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  border-left: 2px solid #c0c0c0;
  padding: 2px 0 0 8px;
}
.message > .replies:empty {
  display: none;
}

.message + .message {
  margin-top: 2px;
}

.nick {
  padding: 1px 2px;
  background: #c0c0c0;
  white-space: pre;
}

@media (max-width: 400px) {

  .message > .line {
    display: block;
    padding: 0 0 0 10px;
    text-indent: -10px;
  }
  .message > .line > * {
    text-indent: 0;
  }
  .message > .line .nick-wrapper, .message > .line .content,
  .message > .line .content .text {
    display: inline;
    position: static;
    margin: 0;
  }

  .nick {
    padding: 0 1px;
  }

}

#main {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  text-align: left;
  transition: opacity 1s;
}

.sidebar {
  position: fixed;
  top: 0;
  right: 5px;
  margin-right: 15px; /* For scrollbar */
  text-align: right;
  transition: background 0.5s;
}
.sidebar > * {
  background: rgba(255, 255, 255, 0.5);
  padding: 5px 0 5px 5px;
}
.sidebar > :not(:first-child) {
  padding-top: 0;
}

.room-name, a.room-name {
  font-weight: bold;
  text-decoration: none;
  color: black;
}
.staging {
  font-style: italic;
}

.online-status, .settings {
  display: inline-block;
  width: 1em;
  height: 1em;
  vertical-align: bottom;
  border-radius: 50%;
  border: 1px solid black;
  box-sizing: content-box;
}

.online-status {
  background: #ffff00;
  transition: background 0.5s linear;
}
.online-status.connected {
  background: #00c000;
}
.online-status.broken {
  background: #c00000;
}

.settings-wrapper {
  display: inline-block;
  position: relative;
  z-index: 10;
}
.settings {
  font-size: 100%;
  line-height: 0;
  background: white;
  cursor: pointer;
}
.settings::-moz-focus-inner {
  margin: 0;
  border: 0;
  padding: 0;
}
.settings img {
  padding: 2px;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}
.settings-content {
  display: none;
  position: absolute;
  top: 100%;
  right: 0;
  margin-top: -1px;
  border: 1px solid black;
  padding: 5px;
  z-index: -1;
  text-align: left;
  white-space: nowrap;
  background: white;
  color: black;
}

.user-list-wrapper {
  max-height: 75vh;
  overflow: auto;
}
.user-list {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-align-items: flex-end;
  flex-direction: column;
  align-items: flex-end;
}
.user-list .nick {
  margin: 2px 0 2px 2px;
  color: black;
}
.user-list .nick:empty {
  display: none;
}

.input-bar {
  display: -webkit-flex;
  display: flex;
  -webkit-align-content: stretch;
  align-content: stretch;
  width: 100%;
  margin: 5px 0;
  background: white;
  box-shadow: 0 0 5px #808080;
}
.input-bar .input-info-cell {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
}
.input-bar .input-nick-cell, .input-bar .input-message-cell {
  display: inline-block;
  position: relative;
}
.input-bar .input-message-cell {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  padding: 1px 0 1px 0.25em;
}
.input-bar .input-info-cell .wrapper {
  display: block;
  padding: 1px 0;
  min-height: 1.2em;
  line-height: 0;
  text-align: center;
}
.input-bar .input-info-cell img {
  display: inline-block;
  width: 1.2em;
  height: 1.2em;
  cursor: pointer;
}
.input-bar .input-info-cell .wrapper :not(.visible) {
  visibility: hidden;
}
.input-bar .input-nick-sizer, .input-bar .input-nick,
.input-bar .input-message {
  display: block;
  margin: 0;
  border: 0;
  padding: 0;
  font: inherit;
}
.input-bar .input-nick-cell .input-nick-sizer {
  display: inline-block;
  padding: 1px 2px;
  white-space: pre;
  min-height: 1.2em;
  line-height: 1.2;
  vertical-align: bottom;
  color: transparent;
  background: #c0c0c0;
  transition: background 0.1s linear, color 0.5s, background 0.5s;
}
.input-bar .input-nick-cell .input-nick {
  position: absolute;
  top: 1px;
  left: 2px;
  min-width: 100%;
  line-height: 1.2;
  color: black;
  background: transparent;
}
.input-bar .input-message-cell .input-nick-prompt {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  border: 1px solid #808080;
  padding-right: 0.25em;
  height: 1.2em;
  white-space: nowrap;
  cursor: pointer;
}
.input-bar .input-message-cell .input-nick-prompt img {
  width: auto;
  height: 100%;
  vertical-align: bottom;
}
.input-bar .input-message-cell .input-message {
  width: 100%;
  height: 1.2em;
  line-height: 1.2;
  color: black;
  background: transparent;
  overflow: hidden;
  resize: none;
}

.input-bar input, .input-bar textarea {
  outline: none;
}

.message > .replies > .input-bar:first-child {
  margin-top: 3px;
}
.message > .replies > .input-bar:last-child {
  margin-bottom: 3px;
}

.message-box {
  position: relative;
  padding-left: 3.5em;
  overflow: auto;
}
.message-box.notimes {
  padding-left: 0;
}
.message-box.notimes .message > .line time {
  display: none;
}
.message-box.notimes .input-bar .input-info-cell {
  display: none;
}

.message-pane {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-y: scroll;
}
.message-pane > .message-box {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-justify-content: flex-end;
  flex-direction: column;
  justify-content: flex-end;
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px 5px 5px 3.5em;
}
.message-pane > .message-box.notimes {
  padding-left: 5px;
}

.message-pane > .message-box > .message:last-child {
  margin-bottom: 2px;
}

.turn {
  transform: rotate(180deg);
  -webkit-transform: rotate(180deg);
}
.turn-left {
  transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
}

.message.new:not(.mine):not(.ping) > .line {
  background: rgba(128, 128, 128, 0.3);
  /* Have to define explicitly so that the pausing selector
   * has a chance */
  animation-name: bgfade;
  animation-duration: 10s;
  animation-timing-function: linear;
  animation-fill-mode: both;
  -webkit-animation-name: bgfade;
  -webkit-animation-duration: 10s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-fill-mode: both;
}
.message.new > .line .time-wrapper::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  right: 2px;
  width: 2px;
  height: 100%;
  background: #808080;
  animation-name: bgfade;
  animation-duration: 60s;
  animation-timing-function: linear;
  animation-fill-mode: both;
  -webkit-animation-name: bgfade;
  -webkit-animation-duration: 60s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-fill-mode: both;
}
.message.new.offscreen > .line,
.message.new.offscreen > .line .time-wrapper::after {
  animation-play-state: paused;
  -webkit-animation-play-state: paused;
}
@keyframes bgfade { to { background: transparent; } }
@-webkit-keyframes bgfade { to { background: transparent; } }

@media (max-width: 400px) {

  .input-bar .input-message-cell {
    padding: 0 0 0 0.25em;
  }
  .input-bar .input-nick-sizer {
    padding: 0 1px;
  }
  .input-bar .input-nick {
    top: 0;
    left: 1px;
  }

}

body, .breadcrumbs.standalone *, .sidebar > *, .sidebar-top > *,
.sidebar-top > .settings-wrapper > *, .input-bar, .input-bar .input-message {
  transition: color 0.5s, background 0.5s;
}

